# pypi-lockdown

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: securing-python-packaging.md
scripts/: release.sh
src/pypi_lockdown/: __main__.py  _build_standalone.py  configure.py  scaffold.py  standalone.py  verify.py
tests/: test_lockdown.py
