[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pypi-lockdown"
dynamic = ["version"]
description = "Bootstrap Python environments to use internal PyPI feeds"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "artifacts-keyring-nofuss",
]

[tool.setuptools-scm]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
build = ["shiv", "tox"]

[project.scripts]
pypi-lockdown = "pypi_lockdown.__main__:main"
